mule-user-guide/v/3.5/wmq-connector.adoc
=  WMQ连接器

_ *Standard* _

WMQ连接器使用WMQ协议连接到WebSphere MQ服务器。当您将WMQ图标放在流程开始处的Studio画布上时，它将用作入站端点。如果将WMQ图标放置在流程中的任何其他位置，WMQ将用作出站端点。

在这两种情况下，WMQ端点都可以实现单向或请求响应交换模式。

== 安装

您可以使用 link:/mule-user-guide/v/3.5/installing-connectors[从Anypoint Exchange安装连接器]中的说明在Anypoint Studio中安装连接器。

== 配置

WMQ端点的属性编辑器提供了涵盖全部配置可能性的字段。

常规选项卡=== 

image:1.png[1.png]

[%header,cols="2*"]
|===
| {字段{1}}说明
| *Display Name*  |输入描述您流程中端点角色的显示名称，例如"WMQ Message Receiver"。
| *Exchange Pattern*  |在标有*Exchange Pattern*的文本框中单击任意位置以显示下拉列表。选择其中一个有效选项：`One-Way`或`Request-Response`。
| *Queue Name*  |指定端点将连接到的WMQ队列
| *Target Client*  |单击其中一个单选按钮以选择JMS或非JMS格式。 （非JMS是默认的。）
| *Connector Configuration*  |单击标记为“连接器配置”的文本框右侧的绿色"plus"图标（+），指定一个全局连接器为该端点提供连接设置。 Studio捆绑了两个全局连接器（WMQ和WMQ XA），用于WMQ端点。通常，XA连接器用于"multi-resource transactions,"（例如，您需要WMQ端点与JDBC连接器或JMS服务器对话）。 WMQ连接器用于由WMQ专门处理的事务，或者事务未执行时。
| *Transaction Type*  |默认情况下，不指定事务类型，但支持XA，WMQ和多资源事务。点击*Transaction Type*文本框中的任意位置可显示列出所有有效选项的下拉菜单。
| *Action*  |只有当您首先选择一种有效的交易类型时，该字段才会生效。 NONE是默认值。有效的选择是NONE，ALWAYS_BEGIN，BEGIN_OR_JOIN，ALWAYS_JOIN和JOIN_IF_POSSIBLE。点击*Action*文本框中的任意位置可显示列出所有有效选项的下拉菜单。
| *Timeout*  |该属性在入站和出站端点都可用，但仅在指定事务时使用。激活此字段时，指定出站端点应等待WMQ服务器确认端点发送的消息已放入队列的时间（以毫秒为单位）。
| *Interact with External*  |只有在选择XA交易作为交易类型时，该字段才会生效。当您选中该框时，Mule将与在Mule之外开始的交易进行互动。例如，当a）设置该属性时，Mule将加入外部事务，以及b）将Action属性设置为BEGIN_OR_JOIN。但是，当Action设置为ALWAYS_BEGIN时，将会引发异常，因为外部事务已经在进行中，并且根据定义，不能由Mule启动。
|===

=== 高级选项卡

image:2-adv_tab.png[2- adv_tab]

[%header,cols="2*"]
|===
| {字段{1}}说明
| *Address*  |此端点的通用地址，以包含正在使用的协议的URI的形式指定。
| *Response Timeout*  |进行同步端点调用后等待响应的超时时间。
| *Encoding*  |用于消息的字符串编码类型（如`US ASCII`）。点击关联文本框中的任意位置可显示列出所有有效选项的下拉菜单。
| *Disable Transport Transformer*  |选中此框可防止此端点使用任何可能已在端点关联的全局连接器上配置的默认转换器。
| *MIME Type*  |单击关联文本框中的任意位置可显示可为此端点配置的有效MIME类型列表。
| *Connector Endpoint*  |单击标有端点引用的文本框右侧的绿色"plus"图标（+），以指定一个全局端点来为此端点提供设置。 Studio捆绑了WMQ全局端点，您可以将其配置为WMQ端点实例，并随后将其用作所有WMQ端点实例的"write once, use repeatedly"模板。
| *Correlation ID*  |输入一个Correlation ID字符串以链接两条消息（例如请求消息及其响应消息）。通常，指定WMQ分配给每个消息的前缀`ID:`和`Message ID`，然后WMQ将该字符串填充到24个字节。
| *Message Type*  |单击文本框中的任意位置以显示所有有效选项的下拉菜单：MQMT_REQUEST，MQMT_DATAGRAM，MQMT_REPLY和MQMT_REPORT。从列表中选择一个选项。 MQMT_REQUEST是默认值。
| *Character Set*  |将此属性设置为1（`true`）以覆盖由目标队列指定的字符编码。默认值是`0`（例如，属性是`false`）。
| *Time to Live*  |指定Mule保留已处理消息的值（以毫秒为单位），从分派到队列开始。默认值是`0`，这意味着Mule会保留已处理的消息"forever."
| *Priority*  |在0-9的范围内指定优先WMQ应放置当前消息。 0-4落入"normal"优先级的等级范围，而5-9有资格获得"expedited"递送。
| *Persistent Delivery*  |选中此复选框，以便WMQ同时发送当前消息并将其记录到稳定（例如"persistent"）存储中，以便如果递送失败，存储的消息副本可以恢复为另一次传递尝试。该属性默认为未选中。
| *Disable Temporary Reply to Destinations*  |选中此框可阻止Mule等待来自临时目的地的消息接收确认。该属性默认为未选中。
| *Enable default events tracking*  |为此端点启用默认 link:/mule-user-guide/v/3.5/business-events[业务事件]跟踪。
|===

=== 变形金刚标签

image:3-transformers.png[3，变压器]

[%header,cols="2*"]
|===
| {字段{1}}说明
| *Global Transformers (Request)* a |
点击标有*Global Transformers*的文本框右侧的绿色*plus*图标，然后从下拉菜单中选择从传入传输中收到消息时应用的变压器。在您选择的转换器出现*Properties*窗格后，根据需要配置可用字段。 （大多数变压器只需要很少或没有配置）。点击*OK*完成操作。

点击加号图标旁边的绿色*down*箭头，将连接器从*Global Transformers*文本框转移到*Transformers to be applied*列表。

将所有想使用的变压器放入变压器列表中后，点击变压器将这些项目按照您希望应用的顺序进行排列，然后单击*up*和*down*箭头，将变压器放置在列表中。重复，直到你对序列满意为止。

您也可以从*Transformers to be applied*列表中选择要编辑的变压器，然后单击铅笔图标，该图标与上下箭头位于同一行上。

| *Global Transformers (Response)*  |重复上面刚刚描述的过程，这次创建了一系列转换器，以便在通过关联的传输器分派消息之前应用到消息中。
|===

== 另请参阅

有关使用XML编辑器设置WMQ端点属性的详细信息，请参阅 link:/mule-user-guide/v/3.5/mule-wmq-transport-reference[Mule WMQ运输参考]。
